--- a/personalProject/app/assets/stylesheets/application.css.scss
+++ b/personalProject/app/assets/stylesheets/application.css.scss
@@ -29,7 +29,7 @@ nav {
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
 	.navbar-brand {
 		a {
-			color: #BD1E23;
+			color: #6597c8;
 			font-weight: bold;
 			&:hover {
 				text-decoration: none;
