--- a/personalProject/app/assets/stylesheets/application.css.scss
+++ b/personalProject/app/assets/stylesheets/application.css.scss
@@ -19,6 +19,7 @@
 
 body {
 	background: #E9E9E9;
+	padding:25px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -42,10 +43,10 @@ nav {
   margin: 0 auto;
   width: 100%;
   .box {
-	  margin: 10px;
-	  width: 350px;
+	  margin: 100px;
+	  width: 100px;
 	  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
-	  border-radius: 7px;
+	  border-radius: 10px;
 	  text-align: center;
 	  img {
 	  	max-width: 100%;
@@ -53,16 +54,25 @@ nav {
 	  }
 	  h2 {
 	  	font-size: 22px;
-	  	margin: 0;
-	  	padding: 25px 10px;
+	  	margin: 10;
+	  	padding: 0px 0px;
 	  	a {
 				color: #474747;
 	  	}
 	  }
+	  .panel-footer {
+			padding: 10px 20px;
+			p {
+				margin: 0;
+			}
+			.user {
+				padding-top: 5px;
+			}
+		}
 	  .user {
 	  	font-size: 12px;
 	  	border-top: 1px solid #EAEAEA;
-			padding: 15px;
+			padding: 10px;
 			margin: 0;
 	  }
 	}
