added tag ability

--- a/personalProject/app/assets/stylesheets/application.css.scss
+++ b/personalProject/app/assets/stylesheets/application.css.scss
@@ -26,6 +26,11 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: 100;
 }
 
+.css1 { font-size: 1.0em; }
+.css2 { font-size: 1.2em; }
+.css3 { font-size: 1.4em; }
+.css4 { font-size: 1.6em; }
+
 nav {
 	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.22);
 	.navbar-brand {
