--- a/personalProject/app/views/posts/_form.html.slim
+++ b/personalProject/app/views/posts/_form.html.slim
@@ -5,5 +5,8 @@
     = f.input :title, input_html: { class: 'form-control' }
   .form-group
     = f.input :description, input_html: { class: 'form-control' }
+  .form-group
+    = f.label :tag_list
+	= f.text_field :tag_list, { :placeholder => "Tags separated by commas" }
     
   = f.button :submit, class: "btn btn-primary"
