--- a/personalProject/app/views/layouts/application.html.slim
+++ b/personalProject/app/views/layouts/application.html.slim
@@ -7,7 +7,7 @@ head
   = csrf_meta_tags 
 
 body
-  nav.navbar.navbar-default
+  nav.navbar.navbar-default.navbar-fixed-top
     .container
       .navbar-brand = link_to "Free and For Sale", root_path
 
