--- a/personalProject/app/views/posts/show.html.slim
+++ b/personalProject/app/views/posts/show.html.slim
@@ -1,10 +1,10 @@
 #post_show.row
-  .col-md-8.col-md-offset-2
+  .col-md-6.col-md-offset-3
     .panel.panel-default
-      .panel-heading.post_image
+      .panel-header.text-center
+        h1 = @post.title
         = image_tag @post.image.url(:medium)
       .panel-body
-        h1 = @post.title
         p = @post.description
       .panel-footer
         .row
