descriptions on index

--- a/personalProject/app/views/posts/index.html.slim
+++ b/personalProject/app/views/posts/index.html.slim
@@ -5,6 +5,8 @@
 				.panel-header.text-center
 					h2 = link_to post.title, post 
 					= link_to (image_tag post.image.url(:medium)), post
+				.panel-body
+					p = post.description
 				.panel-footer
 					p
 						| Submitted by 
