--- a/personalProject/app/views/layouts/application.html.slim
+++ b/personalProject/app/views/layouts/application.html.slim
@@ -13,6 +13,7 @@ body
 
       - if user_signed_in?
         ul.nav.navbar-nav.navbar-right
+          li = link_to "All posts near #{current_user.address}", posts_path
           li = link_to "Create New Post", new_post_path
           li = link_to "Sign Out", destroy_user_session_path, method: :delete
       - else
