--- a/personalProject/app/views/posts/index.html.slim
+++ b/personalProject/app/views/posts/index.html.slim
@@ -6,7 +6,7 @@
 					h2 = link_to post.title, post 
 					= link_to (image_tag post.image.url(:medium)), post
 				.panel-body
-					p = post.description
+					p = simple_format(post.description)
 				.panel-footer
 					p
 						| Submitted by 
