--- a/personalProject/app/views/posts/show.html.slim
+++ b/personalProject/app/views/posts/show.html.slim
@@ -5,7 +5,7 @@
         h1 = @post.title
         = image_tag @post.image.url(:medium)
       .panel-body
-        p = @post.description
+        p = simple_format(@post.description)
       .panel-footer
         .row
           .col-md-6
@@ -15,9 +15,10 @@
               = "you"
              - else
               = @post.user.name 
-            p  
-              a href="mailto:#{@post.user.email}" 
-                = "Email #{@post.user.name}"
+            - if (user_signed_in? && @post.user != current_user)
+              p  
+                a href="mailto:#{@post.user.email}" 
+                  = "Email #{@post.user.name}"
             p 
              | Tags: 
              = raw @post.tag_list.map { |t| link_to t, tag_path(t) }.join(', ')
